농장 소개 동영상 사이즈 조절 완료, 커뮤니티 업데이트 이미지 미적용 문제 해결

--- a/web/resources/css/module/res-element.css
+++ b/web/resources/css/module/res-element.css
@@ -42,6 +42,12 @@
 }
 
 @media (max-width: 767px) {
+    .farm-detail ._desc .summernote-container iframe {
+        width: 100%;
+        max-width: 640px;
+        min-width: 430px;
+    }
+
     .board-container-deck {
         margin: -12px;
     }
