summernote float 수정

--- a/web/resources/css/module/summernote.css
+++ b/web/resources/css/module/summernote.css
@@ -5,6 +5,8 @@
 .summernote-container * {
     font-family: 'Pretendard', Spoqa Han Sans Neo, 'Spoqa Han Sans Neo', 'Noto Sans KR', 'Roboto', Roboto, 'sans-serif', sans-serif !important;
     color: var(--gray-dark-low) !important;
+    float: none !important;
+    margin-left: 0 !important;
 }
 
 .summernote-container ul {
